# option-pricing

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.gitea/workflows/: ci.yml
cpp/: BSWrapper.cpp  BSWrapper.hpp  BlackScholesClosedFormEngine.cpp  BlackScholesClosedFormEngine.hpp  BlackScholesProcess.cpp  BlackScholesProcess.hpp  CMakeLists.txt  DBIngest.cpp  DBIngest.hpp  Exercise.cpp  Exercise.hpp  FlatVolatilitySurface.cpp  FlatVolatilitySurface.hpp  FlatYieldCurve.cpp  FlatYieldCurve.hpp  Instrument.cpp  Instrument.hpp  MarketData.cpp  MarketData.hpp  MonteCarloEngine.cpp  MonteCarloEngine.hpp  NewtonSolver.cpp  NewtonSolver.hpp  Option.cpp  Option.hpp  Payoff.cpp  Payoff.hpp  PricingEngine.cpp  PricingEngine.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Statistics.cpp  Statistics.hpp  StochasticProcess.cpp  StochasticProcess.hpp  VolatilitySurface.cpp  VolatilitySurface.hpp  YieldCurve.cpp  YieldCurve.hpp
cpp/ImpliedVolatility/: Pybind.cpp
docs/: Doxyfile  Notes.md  Requirements.md  SECURITY.md  SETUP.md
electricity_price_predictor/: README.md  requirements.txt
electricity_price_predictor/docs/: architecture.md  developer_guide.md
electricity_price_predictor/scripts/: build_feature_store.py  init_db.py
electricity_price_predictor/sql/: 001_electricity_price_schema.sql
electricity_price_predictor/src/data_analysis/: analyze_data.ipynb
electricity_price_predictor/src/electricity_price_predictor/: __init__.py  cache.py  db.py  entsoe_api.py  features.py  pipeline.py
electricity_price_predictor/src/electricity_price_predictor/benchmark/: __init__.py  data_prep.py  gam_ar1.py  lightgbm_model.py  lstm_model.py  metrics.py  suite.py
qengine/: __init__.py
scripts/: setup_postgres.py  test_qengine_bindings.py
src/: Analytics.cpp  Analytics.hpp  BlackScholesProcess.cpp  BlackScholesProcess.hpp  CMakeLists.txt  DBIngest.cpp  DBIngest.hpp  Exercise.cpp  Exercise.hpp  Instrument.cpp  Instrument.hpp  MarketData.cpp  MarketData.hpp  MonteCarloEngine.cpp  MonteCarloEngine.hpp  NewtonSolver.cpp  NewtonSolver.hpp  Option.cpp  Option.hpp  Payoff.cpp  Payoff.hpp  PricingEngine.cpp  PricingEngine.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Statistics.cpp  Statistics.hpp  StochasticProcess.cpp  StochasticProcess.hpp  VolatilitySurface.cpp  VolatilitySurface.hpp  YieldCurve.cpp  YieldCurve.hpp  black_scholes.cpp  main.cpp  monte_carlo.cpp  monte_carlo.hpp
src/Battery/: MILP_predict.py
src/ImpliedVolatility/: compute_vls.py  svi.py
src/calibration/: Stats.cpp  Stats.hpp
src/data/: database_interaction.py  load_data.py  yfinance_pull.py
src/data/config/: settings.py
src/data/ingestion/: db_connect.py  fred_data_ingestion.py  ingest_smard.py  ingest_ubs_comparison.py  ingest_yahoo_options.py
src/data/ingestion/config/: __init__.py  settings.py
src/data/sql/: schema.sql
src/models/: Model.cpp  Model.hpp  black_scholes.cpp  black_scholes.hpp  payoff.cpp  payoff.hpp
src/simulation/: monte_carlo.cpp
standalone_numerical_experiments/local_volatility_instability/: INDEPENDENT_STANDALONE.txt  gatheral_local_vol.py  run_experiment.py
tests/: test_black_scholes.cpp
tests/stubs/: FakeMarketData.cpp  FakeMarketData.hpp  FlatVolatilitySurface.cpp  FlatVolatilitySurface.hpp  FlatYieldCurve.cpp  FlatYieldCurve.hpp
